fix: improved color contrast and z axis fix on main icons

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,8 @@
     --color-on-surface-weak-dark: oklch(0.56 0 none);
 
     /* Navbar-specific colors */
-    --color-navbar: oklch(0.64 0.1756 260.55);
-    --color-navbar-dark: oklch(0.34 0.1083 260.4);
+    --color-navbar: oklch(0.49 0.155 260.7);
+    --color-navbar-dark: oklch(0.27 0.0904 260.42);
     --color-navbar-dropdown-bg: oklch(0.8 0.0191 258.36);
     --color-navbar-dropdown-bg-dark: oklch(0.31 0 none);
     --color-navbar-dropdown-bg-500: oklch(0.72 0.0184 256.31);
